
gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for libgeda 

Most recent changes are at the top of this file

2000-02-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* All configure.in files: Changed the version to 20000220 (to force
	  a release)

	* include/struct.h: Added text_alignment flag to object structure

	* src/s_basic.c: Inited above flag to default value

	* src/s_basic.c: Removed old unused code

	* src/o_text_basic.c: Added the text alignment flag to the file format
	  for reading in text items (old text format is still valid though)
	
	* src/o_text_basic.c: Added the text alignment flag to the file format
	  (saving text times)

	* include/defines.h: Added text alignment #defines

	* src/a_basic.c: Change the default version number (to the current
	  version) if the version tag is not found in a file read in by o_read

	* src/o_text_basic.c: Added o_text_height function to help 
	  readability of the up the code and get rid of awful hardcoded 
	  constants

	* src/o_text_basic.c: Added code to support text alignment flag as well
	  as code to support rotation and mirroring of this new text

	* src/o_text_basic.c: Started getting postscript printing to work; not
	  complete yet
	
2000-02-01  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_hierarchy.c: Fixed some bugs so that detached pages (from
	  the hierarchy) get properly reconnected when they are called for
	  again

2000-01-31  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_slib.c: Created s_slib_search_single which just search for
          the filename and does nothing else to the name.

	* src/s_hierarchy.c: Created s_hierarchy_down_schematic_single and
	  transformed old call into s_hierarchy_down_schematic_multiple

	* src/o_attrib.c: Put in another check in o_attrib_free_returned
	  to make sure found_objects is not null before it is dereferenced

	* include/struct.h: Added enforce_hierarchy to toplevel structure